# trader

./: .env.example  .gitignore  Cargo.toml  README.md  Sandbox.ipynb  __main__.py  alpaca_backtest.py  back_test.py  backup.db  backup2.db  backup3.db  combined.py  daily_update.sh  delete.txt  document_llm.py  efficient_alpaca_backtest.py  metrics_example.txt  news.py  parse.py  pyproject.toml  requirements.txt  sec_parser.py  simulate.py  stock_data.db  test.py  test_alpaca.py  test_edgar.py  trade_signals.csv  try_edgar_downloader.py
.ipynb_checkpoints/: Sandbox-checkpoint.ipynb  Untitled-checkpoint.ipynb
backup/: alpaca_backtest.py  anthro.py  back_test.py  combined.py  crosses.py  crossover.py  quarterly_from_yfinance.py  today.py
examples/: get_income_statement.rs  historical_data.rs  test_buy_appl.rs
experimental/: test_alpaca.py
src/: get_finance_data.py  lib.rs  main.rs
src/trader/: __init__.py  __main__.py  agent.py  daily_update.py  dark.mplstyle  database.py  finance_client.py  log.py  trader.py
src/trader/external_api/: __init__.py  alpaca_client.py  finnhub_client.py
src/trader/parsing/: document_llm.py  edgar_docs.py  sec_parser.py
src/trader/parsing/parsers/: sg13.py
src/trader/strategies/: __init__.py  strategy.py
